setting up pipeline